server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__declared_sources_under_a_prefix.snap
---
source: server/src/analysis/modules/tests.rs
expression: "(declare-project :name \"x\")\n(declare-source :prefix \"fixture\" :source [\"src/shapes.janet\" \"lib\"])"
---
----- SOURCE CODE
(declare-project :name "x")
(declare-source :prefix "fixture" :source ["src/shapes.janet" "lib"])

----- PACKAGES
fixture/shapes loads /ws/src/shapes.janet
fixture/lib loads /ws/lib
