server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__import_a_relative_module.snap
---
source: server/src/analysis/modules/tests.rs
expression: (import ./a)
---
----- SOURCE CODE
(import ./a)

----- IMPORTS
./a as "a/"
