server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__import_with_an_extension.snap
---
source: server/src/analysis/modules/tests.rs
expression: (import ./sub/e.janet)
---
----- SOURCE CODE
(import ./sub/e.janet)

----- IMPORTS
./sub/e.janet as "e/"
