server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__include_directives_import_without_a_prefix.snap
---
source: server/src/analysis/modules/tests.rs
expression: "# janet-zed: include ./json.janet ./project\n(import ./a)"
---
----- SOURCE CODE
# janet-zed: include ./json.janet ./project
(import ./a)

----- IMPORTS
./a as "a/"
./json.janet as ""
./project as ""
