server/src/analysis/modules/snapshots/janet_zed_server__analysis__modules__tests__re_export_calls_import_their_quoted_names.snap
---
source: server/src/analysis/modules/tests.rs
expression: "(re-export \"./extension\" ['contribute! 'declare-point!])\n(re-export \"./semver\" '[parse-version])\n(print \"x\" [1 2])\n(f \"y\" ['a b])\n(def x \"doc\" ['a])"
---
----- SOURCE CODE
(re-export "./extension" ['contribute! 'declare-point!])
(re-export "./semver" '[parse-version])
(print "x" [1 2])
(f "y" ['a b])
(def x "doc" ['a])

----- IMPORTS
./extension as "" only contribute! declare-point!
./semver as "" only parse-version
